--- a/config.env.example
+++ b/config.env.example
@@ -1,3 +1,21 @@
 SESSION_ID="levanter_sessionid"
 VPS="true"
-AUTO_UPDATE="true"
+AUTO_UPDATE="true"echo 
+PREFIX = .
+STICKER_PACKNAME = fedha
+ALWAYS_ONLINE = false
+RMBG_KEY = null
+LANGUAG = en
+WARN_LIMIT = 3
+FORCE_LOGOUT = false
+BRAINSHOP = 159501,6pq8dPiYt7PdqHz3
+MAX_UPLOAD = 200
+REJECT_CALL = false
+SUDO = 989876543210
+TZ = kenya
+VPS = true
+AUTO_STATUS_VIEW = true
+SEND_READ = false
+AJOIN = true
+DISABLE_START_MESSAGE = false
+PERSONAL_MESSAGE = null" > config.env
